--- a/style.css
+++ b/style.css
@@ -28,13 +28,10 @@ body {
     height: 100vh;
     font-family: 'Rubik', sans-serif;
     background: var(--Very-dark-blue);
-}
-
-.main-container{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: center; 
 }
 
 .profile-card h1 {
@@ -105,10 +102,11 @@ li a:hover {
 
 .card-container {
     /* width: 100%; */
+    height: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: flex-end;
 }
 
 .header {
