--- a/style.css
+++ b/style.css
@@ -85,9 +85,8 @@ li a:hover {
 .container {
     width: 60%;
     margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(265px, 1fr));
 }
 
 .profile-card {
@@ -96,17 +95,6 @@ li a:hover {
     background: var(--Dark-blue);
     color: #fff;
     border-radius: 15px;
-    height: auto;
-}
-
-
-.card-container {
-    /* width: 100%; */
-    height: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    align-items: flex-end;
 }
 
 .header {
@@ -131,22 +119,43 @@ ul li a:hover {
 }
 
 .card {
-    width: 30%;
+    min-width: 265px;
+    height: 100%;
     background: var(--Light-red-work);
     color: #fff;
     border-radius: 15px;
-    position: relative;
-    height: auto;
+    overflow: hidden;
 }
 
 .card .img {
-    text-align: right;
-    display: block;
+  position: relative;
+  display: flex;
+  justify-content: end;
+  z-index: 1;
+  top: -10px;
 }
 
 .card-body {
+    position: relative;
     background: var(--Dark-blue);
-    height: auto;
     border-radius: 15px;
-    padding: 2em;
+    padding: 1em;
+    overflow: hidden;
+    z-index: 2;
+}
+
+.card-header {
+    padding-bottom: 1.3em;
+    font-weight: 500;
+}
+
+.card-time {
+    font-weight: 300;
+    font-size: 2.5em;
+    padding-bottom: 0.2em;
+}
+
+.card-desc {
+    font-weight: 400;
+    color: var(--Pale-Blue);
 }
