--- a/style.css
+++ b/style.css
@@ -233,13 +233,13 @@ a {
     margin-bottom: 0;
   }
 
-  .profile-card .profile-pic img {
+  /* .profile-card .profile-pic img {
     width: 100%;
     max-width: 75px;
     height: auto;
     border-radius: 50%;
     border: 3px solid #fff;
-  }
+  } */
 
   .profile-card .header {
     background: var(--Blue);
@@ -308,7 +308,7 @@ a {
 
   .profile-card .header h1 {
     font-weight: 300;
-    font-size: 1.4rem;
+    font-size: 1.7rem;
   }
 
   .profile-card .header p {
@@ -329,12 +329,19 @@ a {
     font-size: 1.8rem;
   }
 
-  #dp {
-    width: 50px;
+  /* #dp {
+    width: 70px;
     margin-right: 5px;
-  }
+  } */
 
   .card .card-header {
     margin-bottom: 10px;
+  }
+}
+
+@media only screen and (max-width: 365px) {
+  .profile-card .header h1 {
+    font-weight: 300;
+    font-size: 1.4rem;
   }
 }
