--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ a {
   text-decoration: none;
 }
 
+.active {
+  color: #fff !important;
+}
+
 .flex-between {
   display: flex;
   justify-content: space-between;
@@ -58,6 +62,8 @@ a {
   grid-template-rows: repeat(2, auto);
   grid-gap: 1rem;
   grid-auto-flow: column;
+  grid-template-areas: "prof work play study"
+  "prof exercise social self";
 }
 
 .profile-card {
@@ -177,18 +183,22 @@ a {
 }
 
 #card-work {
+  grid-area: work;
   background-color: var(--Light-red-work);
 }
 
 #card-play {
+  grid-area: play;
   background-color: var(--Soft-blue-play);
 }
 
 #card-study {
+  grid-area: study;
   background-color: var(--Light-red-study);
 }
 
 #card-exercise {
+  grid-area: exercise;
   background-color: var(--Lime-green-exercise);
 }
 
@@ -202,10 +212,12 @@ a {
 }
 
 #card-social {
+  grid-area: social;
   background-color: var(--Violet-social);
 }
 
 #card-self {
+  grid-area: self;
   background-color: var(--Soft-orange-self-care);
 }
 
@@ -220,10 +232,11 @@ a {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(7, auto);
+    grid-template-rows: repeat(7, auto-fit);
     grid-template-columns: repeat(2, minmax(auto, 1fr));
     grid-row-gap: 1rem;
     grid-auto-flow: row;
+    grid-template-areas: "prof prof" "work play" "study exercise" "social self";
   }
 
   .profile-card {
@@ -267,6 +280,8 @@ a {
     justify-content: space-between;
     align-items: center;
   }
+
+  
 }
 
 @media only screen and (max-width: 600px) {
@@ -283,6 +298,7 @@ a {
     grid-template-rows: auto;
     grid-row-gap: 1rem;
     grid-auto-flow: row;
+    grid-template-areas: "prof" "work" "play" "study" "exercise" "social" "self";
   }
 
   .profile-card {
@@ -343,6 +359,7 @@ a {
   .card .card-header {
     margin-bottom: 10px;
   }
+  
 }
 
 @media only screen and (max-width: 365px) {
